--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+chameleon-1.0.0
+------------------------------------------------------------------------
+- Testings: Restructuration of the testing/timing drivers
+   - Remove former testings and timings directories
+   - Integrate a new testing structure that both time and check the numerical accuracy of the functions
+   - Integrate kibana testings to follow performance evolution
+- Testings: Use the number of core available as default
+- Switch to a new tile interface to be more flexible about the data sturcture behind the tiles
+- Functions: Add graam function
+- Functions: Add SUMMA-like gemm/hemm/symm operations
+- Functions: Fix many corner cases discovered with the new testing interface
+- Functions: Fix invalid data allocation of temporary data for QR/LQ functions
+- Add the possibility to synchronize the task submission for debuging purpose if provided by the runtime (CHAMELEON_RUNTIME_SYNC)
+- StarPU: upgrade requirement to 1.3
+- StarPU: Fix conflict between environment variable and chameleon_init.
+- StarPU/simGrid: Update performance models
+- Traces: Upgrade of the EZtrace module for the new interface
+- Traces: Removal of the CAHMALEON_ENABLE_TRACING option
+- Upgrade cmake_module
+  - Integrate new precision generation scripts (Support for python 3)
+  - Integrate CMAKE_BUILD_TYPE list with sanitizers detection
+- C++: Replace occurences of the specific operator keyword
+- Guix: Add guix support
+- Fix issues reported by coverity
+
 chameleon-0.9.2
 ------------------------------------------------------------------------
 - chameleon is now hosted on gitlab: https://gitlab.inria.fr/solverstack/chameleon
