--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+chameleon-1.1.0
+------------------------------------------------------------------------
+- ci: Update the docker image to a local storage (!248)
+- feature: add extended asynchronous gemm (possibility to create the workspace outside the function to make it really asynchronous) (!244)
+- starpu/codelets: Add additional const where its needed and missing callbacks (!246)
+- starpu: add support to peek data (!242)
+- starpu: add datatype registration (!241)
+- ci/guix: update the guix recipe (!245)
+- cmake: Move to modern cmake support (!236)
+- feature: Add QDWH Polar decomposition algorithm (!125)
+- feature: Add a two-norm estimator algorithm (!227)
+- feature: Add a latms (LAPACK Test Matrices) algorithm (!226)
+- feature: flops.h is now installed with the library to provide flops computation to the user
+- profiling: Fix profile initialization/generation with StarPU
+- bugfix: Fix issue in ungqr/unglq family functions for corner cases (!233)
+- ci: Integrate NMad into the benchmark suite
+- testing: (Re-) introduce the forcegpu option to force kernels on the CPU/GPU when possible
+- cmake: Allow to disable the TMG requirement when not necessary
+- feature: Add a rank-k matrix generator: plrnk (!220)
+- simgrid: Update the kernels sampling and the associated documentation
+- bugfix: RUNTIME_Desc_flush can now be called on submatrices
+- starpu,quark/codelets: Reduce as much as possible the data accesses when possible (!215,!216)
+- starpu/codelets: add the possibility to execute on a specific worker (!211)
+- feature: `lapack_to_tile` and `tile_to_lapack` functions are now *deprecated* and replaced by `Desc2Lap/Lap2Desc` family (!199,#94,#96).
+
 chameleon-1.0.0
 ------------------------------------------------------------------------
 - Testings: Restructuration of the testing/timing drivers
@@ -5,12 +30,12 @@ chameleon-1.0.0
    - Integrate a new testing structure that both time and check the numerical accuracy of the functions
    - Integrate kibana testings to follow performance evolution
 - Testings: Use the number of core available as default
-- Switch to a new tile interface to be more flexible about the data sturcture behind the tiles
+- Switch to a new tile interface to be more flexible about the data structure behind the tiles
 - Functions: Add graam function
 - Functions: Add SUMMA-like gemm/hemm/symm operations
 - Functions: Fix many corner cases discovered with the new testing interface
 - Functions: Fix invalid data allocation of temporary data for QR/LQ functions
-- Add the possibility to synchronize the task submission for debuging purpose if provided by the runtime (CHAMELEON_RUNTIME_SYNC)
+- Add the possibility to synchronize the task submission for debugging purpose if provided by the runtime (CHAMELEON_RUNTIME_SYNC)
 - StarPU: upgrade requirement to 1.3
 - StarPU: Fix conflict between environment variable and chameleon_init.
 - StarPU/simGrid: Update performance models
@@ -19,7 +44,7 @@ chameleon-1.0.0
 - Upgrade cmake_module
   - Integrate new precision generation scripts (Support for python 3)
   - Integrate CMAKE_BUILD_TYPE list with sanitizers detection
-- C++: Replace occurences of the specific operator keyword
+- C++: Replace occurrences of the specific operator keyword
 - Guix: Add guix support
 - Fix issues reported by coverity
 
@@ -30,8 +55,8 @@ chameleon-0.9.2
 - Add SVD/EVD drivers based on parallel first stage, and sequential LAPACK second stage and solve
 - Add First stage algorithm fo r the SVD/EVD solvers
 - add timing drivers time_zpotrs_tile and time_zgeqrs_tile
-- deactivate warmup by default
-- add an orgmode user guide documentation, see in doc/orgmode/
+- deactivate warm-up by default
+- add an org-mode user guide documentation, see in doc/orgmode/
 
 chameleon-0.9.1
 ------------------------------------------------------------------------
