--- a/doc/user/homepage.org
+++ b/doc/user/homepage.org
@@ -77,7 +77,7 @@
   #+ATTR_HTML: :alt Table of download materials image :title Table of download materials :align center
   | Git       | Release source | Debian/Ubuntu | [[https://brew.sh/][Brew]] (Mac) | [[https://guix.gnu.org/en/][Guix]] (Linux) | [[https://spack.readthedocs.io/en/latest/][Spack]] (Linux/Mac) |
   |-----------+----------------+---------------+------------+--------------+-------------------|
-  | [[https://gitlab.inria.fr/solverstack/chameleon][Chameleon]] | [[https://gitlab.inria.fr/solverstack/chameleon/uploads/b299d6037d7636c6be16108c89bc2aab/chameleon-1.1.0.tar.gz][1.1.0]]          | [[https://gitlab.inria.fr/solverstack/chameleon/-/packages][packages]]      | [[https://gitlab.inria.fr/solverstack/brew-repo][brew-repo]]  | [[https://gitlab.inria.fr/guix-hpc/guix-hpc-non-free][guix-repo]]    | [[https://gitlab.inria.fr/solverstack/spack-repo][spack-repo]]        |
+  | [[https://gitlab.inria.fr/solverstack/chameleon][Chameleon]] | [[https://gitlab.inria.fr/solverstack/chameleon/uploads/b299d6037d7636c6be16108c89bc2aab/chameleon-1.1.0.tar.gz][1.1.0]]          | [[https://gitlab.inria.fr/solverstack/chameleon/-/packages][packages]]      | [[https://gitlab.inria.fr/solverstack/brew-repo][brew-repo]]  | [[https://gitlab.inria.fr/guix-hpc/guix-hpc-non-free][guix-repo]]    | [[https://github.com/spack/spack][spack-repo]]        |
 
   Some packages are part of the official distribution and we just
   provide the package name. For others we provide links where you can
@@ -86,7 +86,7 @@
   distribution please [[sec:contact][contact us]] and we will try to find a solution.
 
   All these packages have been successfully installed and tested on
-  Unix systems: *Linux* (Debian testing, Ubuntu 20.04 LTS) and *macOS*
+  Unix systems: *Linux* (Debian testing, Ubuntu 22.04 LTS) and *macOS*
   (Catalina).
 
 * Quick start guide
@@ -108,14 +108,14 @@
 :PROPERTIES:
 :CUSTOM_ID: quickstart-install-cmake
 :END:
-**** Linux Ubuntu 20.04
+**** Linux Ubuntu 22.04
 :PROPERTIES:
 :CUSTOM_ID: quickstart-install-cmake-ubuntu
 :END:
      Start by installing common development tools
      #+begin_src sh :eval never-export
      sudo apt-get update -y
-     sudo apt-get install -y git cmake build-essential gfortran python wget tar curl pkg-config
+     sudo apt-get install -y git cmake build-essential gfortran python-is-python3 wget tar curl pkg-config
      #+end_src
      - CBLAS/LAPACKE is required (OpenBLAS, Intel MKL, BLIS/FLAME, IBM
        ESSL + Reference LAPACK for cblas/lapacke interface)
@@ -275,17 +275,10 @@
     Examples:
     #+begin_src sh :eval never-export
     # please read https://spack.readthedocs.io/en/latest/getting_started.html
-    git clone https://github.com/llnl/spack.git
+    git clone https://github.com/spack/spack.git
+    . spack/share/spack/setup-env.sh
     cd spack
-    git checkout v0.16.2
-    . share/spack/setup-env.sh
-    # Currently spack provides openmpi v3 as default openmpi. Add the
-    # following in your etc/spack/defaults/packages.yaml in order to set
-    # openmpi 4.0.5 to be the default:
-    # openmpi:
-    #   version: [4.0.5]
-    git clone https://gitlab.inria.fr/solverstack/spack-repo.git
-    spack repo add spack-repo
+    git checkout v0.19.1
     spack install chameleon
     # chameleon is installed here:
     spack location -i chameleon
@@ -313,7 +306,12 @@
 
    If you build your project with CMake we provide a
    ~CHAMELEONConfig.cmake~ file at installation, in the subdirectory
-   ~lib/cmake/~ of the installation. Example of ~CMakeLists.txt~ for
+   ~lib/cmake/~ of the installation. Configure your CMake project using
+   the ~CMAKE_PREFIX_PATH~
+   (https://cmake.org/cmake/help/latest/envvar/CMAKE_PREFIX_PATH.html)
+   as environment variable or CMake variable to give the root
+   installation directory where Chameleon is installed or use the
+   ~CHAMELEON_ROOT~ environment variable. Example of ~CMakeLists.txt~ for
    Chameleon
    #+begin_src :eval never-export
    project(CHAMELEON_EXAMPLE C Fortran)
