--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@ chameleon-1.3.0
 ------------------------------------------------------------------------
  - types: add support for half precision arithmetic into the data descriptors
  - cuda: add half precision conversion kernels, and variants of the gemm kernels (hgemm, and gemmex)
+ - descriptors: Add the possibility to pass arguments to the rankof
+   function. This is used to provide custom distribuitions through a
+   given file. *WARNING*: It changes the interface of
+   CHAMELEON_Desc_Create_User that requires aan additional `, NULL`
+   parameters in the general case.
 
 chameleon-1.2.0
 ------------------------------------------------------------------------
