--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 chameleon-1.3.0
 ------------------------------------------------------------------------
+ - mixed-precision: introduce descripto with precision adapted to local norms
+        - Add CHAMELEON_[dz]gered... functions to reduce the precision of the tiles based on a requested accuracy
+        - Add CHAMELEON_[dz]gerst... functions to restore the original numerical precision of the tiles in a descriptor
  - types: add support for half precision arithmetic into the data descriptors
  - cuda: add half precision conversion kernels, and variants of the gemm kernels (hgemm, and gemmex)
  - descriptors: Add the possibility to pass arguments to the rankof
