--- a/doc/user/homepage.org
+++ b/doc/user/homepage.org
@@ -77,7 +77,7 @@
   #+ATTR_HTML: :alt Table of download materials image :title Table of download materials :align center
   | Git       | Release source | Debian/Ubuntu | [[https://brew.sh/][Brew]] (Mac) | [[https://guix.gnu.org/en/][Guix]] (Linux) | [[https://spack.readthedocs.io/en/latest/][Spack]] (Linux/Mac) |
   |-----------+----------------+---------------+------------+--------------+-------------------|
-  | [[https://gitlab.inria.fr/solverstack/chameleon][Chameleon]] | [[https://gitlab.inria.fr/solverstack/chameleon/uploads/b299d6037d7636c6be16108c89bc2aab/chameleon-1.1.0.tar.gz][1.1.0]]          | [[https://gitlab.inria.fr/solverstack/chameleon/-/packages][packages]]      | [[https://gitlab.inria.fr/solverstack/brew-repo][brew-repo]]  | [[https://gitlab.inria.fr/guix-hpc/guix-hpc-non-free][guix-repo]]    | [[https://github.com/spack/spack][spack-repo]]        |
+  | [[https://gitlab.inria.fr/solverstack/chameleon][Chameleon]] | [[https://gitlab.inria.fr/api/v4/projects/616/packages/generic/source/v1.2.0/chameleon-1.2.0.tar.gz][1.2.0]]          | [[https://gitlab.inria.fr/solverstack/chameleon/-/packages][packages]]      | [[https://gitlab.inria.fr/solverstack/brew-repo][brew-repo]]  | [[https://gitlab.inria.fr/guix-hpc/guix-hpc-non-free][guix-repo]]    | [[https://github.com/spack/spack][spack-repo]]        |
 
   Some packages are part of the official distribution and we just
   provide the package name. For others we provide links where you can
@@ -135,9 +135,9 @@
 
      Then to install Chameleon from sources with CMake, proceed as follows
      #+begin_src sh :eval never-export
-     wget https://gitlab.inria.fr/solverstack/chameleon/uploads/b299d6037d7636c6be16108c89bc2aab/chameleon-1.1.0.tar.gz
-     tar xvf chameleon-1.1.0.tar.gz
-     cd chameleon-1.1.0
+     wget https://gitlab.inria.fr/api/v4/projects/616/packages/generic/source/v1.2.0/chameleon-1.2.0.tar.gz
+     tar xvf chameleon-1.2.0.tar.gz
+     cd chameleon-1.2.0
      # or clone the master branch from the git repository to get the last version
      # git clone --recursive https://gitlab.inria.fr/solverstack/chameleon.git && cd chameleon
      mkdir build && cd build
@@ -185,9 +185,9 @@
 
      Then to install Chameleon from sources with CMake, proceed as follows
      #+begin_src sh :eval never-export
-     wget https://gitlab.inria.fr/solverstack/chameleon/uploads/b299d6037d7636c6be16108c89bc2aab/chameleon-1.1.0.tar.gz
-     tar xvf chameleon-1.1.0.tar.gz
-     cd chameleon-1.1.0
+     wget https://gitlab.inria.fr/api/v4/projects/616/packages/generic/source/v1.2.0/chameleon-1.2.0.tar.gz
+     tar xvf chameleon-1.2.0.tar.gz
+     cd chameleon-1.2.0
      # or clone from git repository
      # git clone --recursive https://gitlab.inria.fr/solverstack/chameleon.git && cd chameleon
      mkdir build && cd build
@@ -202,8 +202,10 @@
     system. Then in a shell terminal
     #+begin_src sh :eval never-export
     # to install one of our non offical package, for example on Ubuntu 22.04
-    wget https://gitlab.inria.fr/api/v4/projects/616/packages/generic/ubuntu_22.04/1.1.0/chameleon_1.1.0-1_amd64.deb
-    sudo apt-get install -y ./chameleon_1.1.0-1_amd64.deb
+    wget https://gitlab.inria.fr/api/v4/projects/616/packages/generic/ubuntu_22.04/1.2.0/chameleon_1.2.0-1_amd64.deb
+    sudo apt-get install -y ./chameleon_1.2.0-1_amd64.deb
+    // and to uninstall use
+    // sudo apt-get autoremove -y chameleon
     mpiexec -n 2 chameleon_dtesting -o potrf -t 2 -n 3200 --nowarmup
     #+end_src
     If there are no package available for your Debian/Ubuntu
